# marsh-manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  marsh-mgr.desktop  requirements.txt
.github/workflows/: linux_release.yml
cmake/: CheckGit.cmake  git_version.cpp.in  git_version.h
include/mavlink/: mavlink_helpers.h
include/mavlink/minimal/: mavlink.h  minimal.h  version.h
scripts/: build_appimage.sh  node_flight_model.py  node_joystick.py  update_mavlink.py
src/: HelpMenu.qml  Main.qml  NetworkView.qml  ToolsMenu.qml  appearanceutils.cpp  appearanceutils.h  applicationdata.cpp  applicationdata.h  clientnode.cpp  clientnode.h  dialectinfo.cpp  dialectinfo.h  frequencyestimator.cpp  frequencyestimator.h  heartbeatservice.cpp  heartbeatservice.h  logger.cpp  logger.h  main.cpp  message.cpp  message.h  networkdisplay.cpp  networkdisplay.h  networkdisplayproxy.cpp  networkdisplayproxy.h  parameterservice.cpp  parameterservice.h  plotbackend.cpp  plotbackend.h  router.cpp  router.h
tools/: dynamics_node.py
